[gd_scene load_steps=4 format=2]

[ext_resource path="res://_NonMainGameRelateds/_PreGameHUDRelated/FirstTimeQuestionWSPanel/Scenes/FTQ_Scene03/FTQ_Scene03.gd" type="Script" id=1]
[ext_resource path="res://_NonMainGameRelateds/_PreGameHUDRelated/FirstTimeQuestionWSPanel/Subs/FTQ_ChoicesPanel/FTQ_ChoicesPanel.tscn" type="PackedScene" id=2]
[ext_resource path="res://_NonMainGameRelateds/_PreGameHUDRelated/FirstTimeQuestionWSPanel/Subs/FTQ_CustomLabel/FTQ_CustomLabel.tscn" type="PackedScene" id=3]

[node name="FTQ_Scene03" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
script = ExtResource( 1 )

[node name="FTQ_CustomLabel_01" parent="." instance=ExtResource( 3 )]
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2

[node name="FTQ_CustomLabel_02" parent="VBoxContainer" instance=ExtResource( 3 )]
margin_bottom = 0.0
mouse_filter = 2

[node name="FTQ_ChoicesPanel" parent="VBoxContainer" instance=ExtResource( 2 )]
margin_top = 4.0
margin_bottom = 4.0
